@@ -1,4 +1,13 @@
-007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>
+2007-06-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/bits/socket.h: Add PF_RXRPC and AF_RXRPC.
+
+2007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>
+
+	* sysdeps/unix/sysv/linux/bits/socket.h: Add PF_IUCV and AF_IUCV.
+
+
+2007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>
 
 	* sysdeps/s390/dl-procinfo.c: New file.
 	* sysdeps/s390/dl-procinfo.h: New file.
